--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <!-- quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</span>
+            <span id="quote"></span>
         </div>
         <!-- author -->
         <div class="quote-author">
-            <span id="author">buddha</span>
+            <span id="author"></span>
         </div>
         <!-- buttons -->
         <div class="button-container">
@@ -28,6 +28,7 @@
         </div>
     </div>
     <!-- Script -->
+    <script src="quotes.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
